Styled header of controls

--- a/app/styles/elements/_modal.scss
+++ b/app/styles/elements/_modal.scss
@@ -34,7 +34,7 @@
       display: block;
       text-indent: 0;
       color: #333;
-      content: "I'm ready";
+      content: "Close";
     }
   }
 }
