--- a/app/styles/inc/_colors.scss
+++ b/app/styles/inc/_colors.scss
@@ -6,6 +6,7 @@ $success: #00C853;
 $fail: #D50000;
 
 $text-on-dark: #999;
+$controls-btn-color: darken(white, 30%);
 
 $equipped-background: #ECEFF1;
 $last-matches-background: #E8F5E9;
