--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,7 +11,6 @@
 @import 'main/typography';
 @import 'main/buttons';
 
-@import 'elements/navbar';
 @import 'elements/loading';
 @import 'elements/popover';
 @import 'elements/tabs';
@@ -22,10 +21,13 @@
 
 // Main parts
 @import 'parts/header';
+@import 'parts/title-bar';
 @import 'parts/main-search';
 @import 'parts/footer';
 @import 'parts/blog-post';
 @import 'parts/player-overlay';
+@import 'parts/current-map';
+@import 'parts/platform-toggle';
 
 // Player card
 @import 'parts/player';
