--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,7 +1,7 @@
 <div class="wrapper" ng-class="{'my-dtr': subdomain}">
   <div class="controls shadow-z-1">
-    <header ng-include="'views/shared/header.html'" ng-controller="HeaderCtrl"></header>
-    <footer ng-include="'views/shared/footer.html'"></footer>
+    <header ng-include="'views/controls/top.html'" ng-controller="HeaderCtrl"></header>
+    <footer ng-include="'views/controls/bottom.html'"></footer>
   </div>
   <div class="content">
     <div class="container-fluid" ng-if="status">
