--- a/app/views/controls/top.html
+++ b/app/views/controls/top.html
@@ -21,7 +21,7 @@
       <form ng-submit="searchPlayerbyName(mainPlayer, platformValue)">
         <div class="main-search__row">
           <div class="main-search__input">
-            <input type="text" class="form-control" placeholder="{{fireteam[0].name || 'Enter profile name'}}" ng-model="mainPlayer" ng-value="(!fireteam[0] ? searchedPlayer : '')">
+            <input type="text" class="form-control" placeholder="{{fireteam[0].name || 'Enter your next victim'}}" ng-model="mainPlayer" ng-value="(!fireteam[0] ? searchedPlayer : '')">
           </div>
           <div class="main-search__controls">
             <div class="main-search__refresh" ng-if="!subdomain" ng-show="fireteam[0].name != null">
@@ -40,7 +40,7 @@
         <form role="form" ng-submit="searchPlayerbyName(teammateName, platformValue, $index, false)">
         <div class="main-search__row">
           <div class="main-search__input">
-            <input type="text" class="form-control" placeholder="{{fireteam[$index].name || 'Enter profile name'}}" ng-model="teammateName">
+            <input type="text" class="form-control" placeholder="{{fireteam[$index].name || 'Enter your next victim'}}" ng-model="teammateName">
               </div>
               <div class="main-search__controls">
                 <div class="main-search__submit">
@@ -55,7 +55,7 @@
   </div>
 </div>
 
-<div class="current-map shadow-z-1" style="background-image:url('{{currentMap.headerImage}}');">
+<div class="current-map shadow-z-1" style="background-image:url('http://bungie.net{{currentMap.pgcrImage}}');">
   <div class="current-map__content">
     <div class="current-map__title">
       <span ng-bind="currentMap.activityName"></span>
@@ -64,9 +64,4 @@
       <button type="button" class="btn btn-default btn-sm" bs-modal="mapModal">Heatmap</button>
     </div>
   </div>
-</div>
-
-<div class="title-bar__btns">
-  <a type="button" class="btn btn-default btn-sm" ng-if="!subdomain" href="http://my.destinytrialsreport.com" target="_self"><span class="highlight">my</span>Report</a>
-  <a type="button" class="btn btn-default btn-sm" ng-if="subdomain" href="http://www.destinytrialsreport.com" target="_self"><span class="highlight">trials</span>Report</a>
 </div>
