add crucible maps to manifest updater, remove unused images and map header images, add ng-style where appropriate,move hazards to definition file, update package.json

--- a/app/styles/parts/_blog-post.scss
+++ b/app/styles/parts/_blog-post.scss
@@ -10,11 +10,11 @@
   margin-left: -2em;
   margin-top: -2em;
   margin-right: -2em;
-
-  img {
-    border-top-left-radius: 2em;
-    border-top-right-radius: 2em;
-  }
+  border-top-left-radius: 2em;
+  border-top-right-radius: 2em;
+  background-position: center;
+  background-size: cover;
+  height: 200px;
 }
 
 .blog-post__meta {
