--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -2,9 +2,7 @@
   <div class="row">
     <div class="col-xs-12">
       <article class="blog-post shadow-z-1">
-        <div class="blog-post__img">
-          <img ng-src="{{currentMap.headerWideImage}}" class="img-responsive" alt="{{currentMap.activityName}}">
-        </div>
+        <div class="blog-post__img" ng-style="{'background-image':'url(\'https://www.bungie.net' + currentMap.pgcrImage + '\')'}"></div>
         <div class="blog-post__title">
           <h2>Gearing up for 2.0</h2>
         </div>
