--- a/app/views/player/overview.html
+++ b/app/views/player/overview.html
@@ -1,5 +1,5 @@
 <div class="player-overview">
-  <div class="player-header" style="background-image:url('{{player.emblem.background}}')">
+  <div class="player-header" ng-style="{'background-image':'url(\'' + player.emblem.background + '\')'}">
     <div class="player-header__title">
       <img class="player-header__emblem" ng-src="{{player.emblem.icon}}" alt="Emblem">
       <div class="player-header__char">
