--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -4,24 +4,20 @@
       <article class="blog-post shadow-z-1">
         <div class="blog-post__img" ng-style="{'background-image':'url(\'https://www.bungie.net' + currentMap.pgcrImage + '\')'}"></div>
         <div class="blog-post__title">
-          <h2>Gearing up for 2.0</h2>
+          <h2>Trials Returning on October 16th!</h2>
         </div>
         <ul class="blog-post__meta">
           <li>
-            <p><span class="material-icons">&#xE8DF;</span> September 10th, 2015</p>
+            <p><span class="material-icons">&#xE8DF;</span> October 2nd, 2015</p>
           </li>
         </ul>
         <div class="blog-post__content">
           <p>
-            Just in case you haven't heard the news, <strong>Trials is taking a break for the next few weeks.</strong><br/>
-            We haven't received any information about the return date but we promise to keep you posted as soon as that's announced.
+            The date has been announced, Trials of Osiris is making its Taken King return on October 16th.<br/>
           </p>
           <p>
-            The <strong>good news</strong> is that this gives us some time to update our UI with all the 2.0 changes.<br/>
-          </p>
-          <p>
-            We will be actively making changes so pardon our dust for the remainder of the downtime.<br/>
-            That being said, the amount of new gear and features in TTK is going to be overwhelming and we welcome all suggestions.<br/>
+            Honestly we are still not sure of how to adjust our app just yet, we have been busy enjoying the new expansion.
+            We want to reach out to you and ask for any suggestions you might think will be valuable during Trials 2.0.<br/>
           </p>
           <p>
             Contact info below, see everyone soon!<br/>
