--- a/app/styles/main/_typography.scss
+++ b/app/styles/main/_typography.scss
@@ -16,6 +16,20 @@
   }
 }
 
+h1:first-child,
+h2:first-child,
+h3:first-child {
+  margin-top: 0;
+}
+
+p:first-child {
+  margin-top: 0;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
 .data-label {
   font-family: 'Roboto Condensed';
   display: block;
