--- a/app/styles/parts/_player-overview.scss
+++ b/app/styles/parts/_player-overview.scss
@@ -19,6 +19,7 @@
 .player-header__emblem {
   width: $player-emblem-size;
   height: $player-emblem-size;
+  float: left;
   margin-right: .5em;
   border-top-left-radius: $player-card-border-radius;
 
@@ -28,10 +29,13 @@
 }
 
 .player-header__char {
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  height: $player-emblem-size;
   color: $player-card;
   vertical-align: middle;
-  max-width: calc(100% - #{$player-emblem-size + 1em});
+  max-width: calc(100% - #{$player-emblem-size + .5em});
+  width: 100%;
 
   .player.with-overlay & {
     opacity: 0;
@@ -42,32 +46,49 @@
   margin: 0;
   font-weight: normal;
   font-size: 1.3em;
+  line-height: 1.5em;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  padding-right: 4em;
   text-shadow: $text-shadow;
 }
 
 .player-info {
   font-size: .9em;
+  flex-grow: 1;
   text-shadow: $text-shadow;
 }
 
-.player-info__light {
-  font-size: .9em;
-  margin: 0 .5em;
-
-  span {
-    margin-right: .1em;
-  }
-}
-
 .player-info__grimoire {
+  margin-left: .75em;
   font-size: .9em;
 
   img {
     height: 1em;
     margin-right: .3em;
+  }
+}
+
+.player-level {
+  padding: 0 1em;
+  text-align: right;
+  float: right;
+  text-shadow: $text-shadow;
+}
+
+.player-level__level {
+  font-size: .9em;
+}
+
+.player-level__light {
+  font-size: 1.1em;
+  font-weight: normal;
+
+  span span {
+    vertical-align: 8%;
+    display: inline-block;
+    line-height: 2em;
+    font-size: .8em;
+    margin-right: .25em;
   }
 }
