--- a/app/views/player/overview.html
+++ b/app/views/player/overview.html
@@ -3,21 +3,27 @@
     <div class="player-header__title">
       <img class="player-header__emblem" ng-src="{{player.emblem.icon}}" alt="Emblem">
       <div class="player-header__char">
-        <h2 class="player-header__gamertag" ng-bind="player.name"></h2>
         <div class="player-info" ng-show="player.characterInfo.level && player.characterInfo.className">
-          <span class="player-info__level" ng-bind="player.characterInfo.level"></span>
+          <h2 class="player-header__gamertag" ng-bind="player.name"></h2>
           <span class="player-info__class" ng-bind="player.characterInfo.subclassName"></span>
-          <span class="player-info__light highlight"><span ng-bind-html="'<span>&#10022;</span>' + player.characterInfo.stats.STAT_LIGHT.value"></span></span>
           <span class="player-info__grimoire">
             <img src="/images/grimoire.png" alt="Grimoire"><span ng-bind="player.grimoire"></span>
           </span>
         </div>
+        <div class="player-level">
+          <div class="player-level__light highlight">
+            <span ng-bind-html="'<span>&#10022;</span>' + player.characterInfo.stats.STAT_LIGHT.value"></span>
+          </div>
+          <div class="player-level__level">
+            Level <span ng-bind="player.characterInfo.level"></span>
+          </div>
+        </div>
       </div>
-      <span class="edit-player__btn shadow-z-1"
+      <!--<span class="edit-player__btn shadow-z-1"
             ng-if="!subdomain && !$first" ng-click="toggleEdit(player)"
             analytics-on analytics-event="Click" analytics-category="Edit">
         <i class="material-icons">&#xE254;</i>
-      </span>
+      </span>-->
     </div>
   </div>
   <!--<div class="player__summary">-->
