display exotic armor piece the same as weapons, added artifacts and ghosts

--- a/app/views/player/equipped.html
+++ b/app/views/player/equipped.html
@@ -1,6 +1,6 @@
 <div class="player-tab--equipped">
   <div class="player-tab__section">
-    <div weapon-nodes="[player.inventory.weapons.primary, player.inventory.weapons.special, player.inventory.weapons.heavy]"></div>
+    <div weapon-nodes="[player.inventory.weapons.primary, player.inventory.weapons.special, player.inventory.weapons.heavy]" exotic-armor="player.inventory.armor.exotic"></div>
   </div>
   <div class="player-tab__section">
     <div class="row">
@@ -28,7 +28,9 @@
   </div>
   <div class="player-tab__section">
     <div class="row">
-      <div armor-list="[player.inventory.armor.head, player.inventory.armor.arms, player.inventory.armor.chest, player.inventory.armor.legs]"></div>
+      <div armor-list="[player.inventory.armor.head, player.inventory.armor.arms,
+                        player.inventory.armor.chest, player.inventory.armor.legs,
+                        player.inventory.armor.artifact, player.inventory.armor.ghost]"></div>
     </div>
   </div>
 </div>
