--- a/app/styles/parts/_player-weapons.scss
+++ b/app/styles/parts/_player-weapons.scss
@@ -33,6 +33,10 @@
     .weapon:nth-child(3) & {
       border-color: transparent darken($equipped-background, 8%);
     }
+
+    .weapon:nth-child(4) & {
+      border-color: transparent darken($equipped-background, 8%);
+    }
   }
 
   &:after {
@@ -49,6 +53,10 @@
     }
 
     .weapon:nth-child(3) & {
+      border-color: transparent darken($equipped-background, 10%);
+    }
+
+    .weapon:nth-child(4) & {
       border-color: transparent darken($equipped-background, 10%);
     }
   }
