--- a/app/views/player/equipped.html
+++ b/app/views/player/equipped.html
@@ -1,6 +1,9 @@
 <div class="player-tab--equipped">
   <div class="player-tab__section">
-    <div weapon-nodes="[player.inventory.weapons.primary, player.inventory.weapons.special, player.inventory.weapons.heavy]" exotic-armor="player.inventory.armor.exotic"></div>
+    <div weapon-nodes="[player.inventory.weapons.primary, player.inventory.weapons.special, player.inventory.weapons.heavy]"></div>
+  </div>
+  <div class="player-tab__section">
+    <div armor="player.inventory.armor.exotic || player.inventory.armor.head" has-exotic="player.inventory.armor.exotic !== null"></div>
   </div>
   <div class="player-tab__section">
     <div class="row">
@@ -9,7 +12,7 @@
            bs-popover="{content:'Tier ' + stat.tier + ' - cooldown is ' + stat.cooldown + '<br>' + stat.value + ' / 300 (' + stat.percentage + '%)'}">
         <div class="player-cooldown__label" ng-bind="stat.name"></div>
         <div class="player-cooldown__nr">
-          <div class="player-cooldown__tier" ng-repeat="value in stat.tiers track by $index">
+          <div class="player-cooldown__tier" ng-class="{'is-half-full': value < 60 && value > 0}" ng-repeat="value in stat.tiers track by $index">
             <progress max="60" animate="true" class="progress not-rounded">
               <bar value="value" class="progress-bar-primary"></bar>
             </progress>
@@ -26,11 +29,11 @@
       </div>
     </div>
   </div>
-  <div class="player-tab__section">
+  <!--<div class="player-tab__section">
     <div class="row">
       <div armor-list="[player.inventory.armor.head, player.inventory.armor.arms,
                         player.inventory.armor.chest, player.inventory.armor.legs,
                         player.inventory.armor.artifact, player.inventory.armor.ghost]"></div>
     </div>
-  </div>
+  </div>-->
 </div>
