Minor improvements to player cool downs

--- a/app/styles/parts/_player-cooldowns.scss
+++ b/app/styles/parts/_player-cooldowns.scss
@@ -29,10 +29,14 @@
   width: 20%;
 
   &.is-half-full .progress .progress-bar-primary {
-    background: lighten(#607D8B, 20%);
+    background: lighten(#607D8B, 25%);
   }
 }
 
-.player-cooldown__tier + .player-cooldown__tier {
+.player-cooldown__tier:first-child {
+  margin-left: -1px;
+}
+
+.player-cooldown__tier {
   padding-left: 1px;
 }
