--- a/app/views/player/equipped.html
+++ b/app/views/player/equipped.html
@@ -12,7 +12,7 @@
            bs-popover="{content:'Tier ' + stat.tier + ' - cooldown is ' + stat.cooldown + '<br>' + stat.value + ' / 300 (' + stat.percentage + '%)'}">
         <div class="player-cooldown__label" ng-bind="stat.name"></div>
         <div class="player-cooldown__nr">
-          <div class="player-cooldown__tier" ng-class="{'is-half-full': value < 60 && value > 0}" ng-repeat="value in stat.tiers track by $index">
+          <div class="player-cooldown__tier" ng-class="{'is-half-full': value !== 60}" ng-repeat="value in stat.tiers track by $index">
             <progress max="60" animate="true" class="progress not-rounded">
               <bar value="value" class="progress-bar-primary"></bar>
             </progress>
