--- a/app/styles/parts/_player-cooldowns.scss
+++ b/app/styles/parts/_player-cooldowns.scss
@@ -28,7 +28,7 @@
   float: left;
   width: 20%;
 
-  &.is-half-full .progress .progress-bar-primary {
+  &.is-incomplete .progress .progress-bar-primary {
     background: lighten(#607D8B, 25%);
   }
 }
