--- a/app/views/player/equipped.html
+++ b/app/views/player/equipped.html
@@ -3,13 +3,13 @@
     <div weapon-nodes="[player.inventory.weapons.primary, player.inventory.weapons.special, player.inventory.weapons.heavy]"></div>
   </div>
   <div class="player-tab__section">
-    <div armor="player.inventory.armor.exotic || player.inventory.armor.head" has-exotic="player.inventory.armor.exotic !== null"></div>
+    <div armor="player.inventory.armor.equipped" has-exotic="player.inventory.armor.equipped.definition.tierType === 6"></div>
   </div>
   <div class="player-tab__section">
     <div class="row">
       <div class="player-cooldown col-xs-4"
            ng-repeat="stat in [player.characterInfo.stats.STAT_INTELLECT, player.characterInfo.stats.STAT_DISCIPLINE, player.characterInfo.stats.STAT_STRENGTH]"
-           bs-popover="{content:'Tier ' + stat.tier + ' - cooldown is ' + stat.cooldown + '<br>' + stat.value + ' / 300 (' + stat.percentage + '%)'}">
+           bs-popover="{content:'Tier ' + stat.tier + ' — ' + + stat.value + ' / 300 (' + stat.percentage + '%)' + '<br>' + 'Cooldown: ' + stat.cooldown}">
         <div class="player-cooldown__label" ng-bind="stat.name"></div>
         <div class="player-cooldown__nr">
           <div class="player-cooldown__tier" ng-class="{'is-incomplete': value !== 60}" ng-repeat="value in stat.tiers track by $index">
