--- a/app/styles/parts/_player-weapons.scss
+++ b/app/styles/parts/_player-weapons.scss
@@ -108,4 +108,6 @@
   text-transform: uppercase;
   color: lighten(#333, 40%);
   font-family: 'Roboto Condensed';
+  width: 50%;
+  float: left;
 }
