--- a/app/views/controls/top.html
+++ b/app/views/controls/top.html
@@ -6,11 +6,11 @@
   </div>
   <div class="platform-toggle">
     <div class="togglebutton">
-      <label class="platform-toggle__name" ng-class="{'is-active' : platformValue}" ng-click="platformValue = true"><img src="images/ps.svg" alt="PlayStation"></label>
+      <label class="platform-toggle__name" ng-class="{'is-active' : platformValue}"><img src="images/ps.svg" alt="PlayStation"></label>
       <label class="platform-toggle__btn">
-        <input type="checkbox" ng-model="platformValue" ng-true-value="false" ng-false-value="true">
+        <input type="checkbox" ng-click="togglePlatform()" ng-model="platformValue" ng-true-value="false" ng-false-value="true">
       </label>
-      <label class="platform-toggle__name" ng-class="{'is-active' : !platformValue}" ng-click="platformValue = false"><img src="images/xbox.svg" alt="Xbox"></label>
+      <label class="platform-toggle__name" ng-class="{'is-active' : !platformValue}"><img src="images/xbox.svg" alt="Xbox"></label>
     </div>
   </div>
 </div>
@@ -18,7 +18,7 @@
 <div class="main-search">
   <div class="main-search__content">
     <div class="main-search__fireteam">
-      <form ng-submit="searchMainPlayerbyName(mainPlayer, platformValue)">
+      <form ng-submit="searchMainPlayerbyName(mainPlayer)">
         <div class="main-search__row">
           <div class="main-search__input">
             <input autofocus type="text" class="form-control" placeholder="{{fireteam[0].name || 'Enter your next victim'}}" ng-model="mainPlayer" ng-value="(!fireteam[0] ? searchedPlayer : '')">
