color weapon nodes instead of adding hazards

--- a/app/styles/parts/_player-weapons.scss
+++ b/app/styles/parts/_player-weapons.scss
@@ -102,6 +102,10 @@
   width: 1.5em;
 }
 
+.weapon-perk__hazard {
+  background: darkred;
+}
+
 .weapon__label {
   font-size: .8em;
   margin-top: -.5em;
