--- a/app/styles/parts/_player-last-matches.scss
+++ b/app/styles/parts/_player-last-matches.scss
@@ -58,3 +58,12 @@
 .last-match__medal {
   margin: .5em 0;
 }
+
+.last-match__medal-count {
+  display: block;
+  margin-top: -33px;
+  padding-left: 10px;
+  color: #fff;
+  font-size: 1.3em;
+  text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
+}
