--- a/app/styles/parts/_player-weapons.scss
+++ b/app/styles/parts/_player-weapons.scss
@@ -107,11 +107,14 @@
 }
 
 .weapon__label {
+  span {
+    color: lighten(#333, 40%);
+  }
   font-size: .8em;
   margin-top: -.5em;
   text-transform: uppercase;
-  color: lighten(#333, 40%);
+  color: #333;
   font-family: 'Roboto Condensed';
-  width: 50%;
+  width: 100%;
   float: left;
 }
