--- a/app/views/controls/top.html
+++ b/app/views/controls/top.html
@@ -1,7 +1,7 @@
 <div class="title-bar">
   <div class="title-bar__title">
     <a href="/" target="_self">
-      <span ng-if="subdomain" class="highlight">my</span>Destiny<span class="highlight">Trials</span>Report
+      <span ng-if="subdomain" class="highlight">my</span>D<span class="hide-on-small">estiny</span><span class="highlight">T<span class="hide-on-small">rials</span></span>R<span class="hide-on-small">eport</span>
     </a>
   </div>
   <div class="platform-toggle">
