--- a/app/styles/parts/_title-bar.scss
+++ b/app/styles/parts/_title-bar.scss
@@ -8,7 +8,7 @@
 }
 
 .title-bar__title {
-  font-size: 2em;
+  font-size: 1.7em;
   line-height: 1.4;
   flex-grow: 1;
 
@@ -18,5 +18,22 @@
   a:active {
     color: white;
     text-decoration: none;
+  }
+}
+
+@media all and (max-width: 1500px) {
+  .title-bar__title {
+    font-size: 1.5em;
+  }
+}
+
+@media all and (max-width: 1380px) {
+  .title-bar__title {
+    font-size: 2em;
+    line-height: 1.1;
+
+    .hide-on-small {
+      display: none;
+    }
   }
 }
