--- a/app/views/controls/bottom.html
+++ b/app/views/controls/bottom.html
@@ -9,7 +9,7 @@
       Help us run this site, donate with <img src="/images/paypal.svg" alt="PayPal">
     </div>
     <div class="donate__descr">
-      You get a sexy <div class="player-hazard player-hazard--donator">Site Donator</div> badge if you leave your gamertag with the donation!</label>
+      You get a sexy <div class="player-hazard player-hazard--donator">Donator</div> badge if you leave your gamertag with the donation!</label>
     </div>
   </a>
 </div>
