--- a/app/views/directives/weapons.html
+++ b/app/views/directives/weapons.html
@@ -10,14 +10,15 @@
         <span ng-bind="weapon.definition.name"></span>
       </div>
       <div class="weapon__perks">
-        <div class="weapon-perk" ng-class="{'weapon-perk__hazard' : node.isHazard}"
+        <div class="weapon-perk"
              ng-repeat="node in weapon.nodes track by $index" bs-popover="{title:node.name,content:node.description}">
           <i class="weapon-perk__icon">
             <img class="img-responsive" ng-src="{{node.icon}}" alt="{{node.name}}">
           </i>
         </div>
       </div>
-      <div class="weapon__label" ng-bind-html="weapon.hazards.join('<span> — </span>')">
+      <div class="weapon__hazards">
+        <span class="player-hazard" ng-repeat="hazard in weapon.hazards">{{hazard}}</span>
       </div>
     </div>
   </div>
