--- a/app/views/directives/armor.html
+++ b/app/views/directives/armor.html
@@ -18,7 +18,7 @@
         </div>
       </div>
       <div class="weapon__label" ng-if="!hasExotic && !exoticArmor.hazard">
-        <span class="player-hazard">No Exotic armor equipped</span>
+        <span class="player-hazard player-hazard--none">No Exotic armor equipped</span>
       </div>
       <div class="weapon__hazards">
         <span class="player-hazard" ng-repeat="hazard in exoticArmor.hazards">{{hazard}}</span>
