--- a/app/styles/parts/_player-last-matches.scss
+++ b/app/styles/parts/_player-last-matches.scss
@@ -60,10 +60,10 @@
 }
 
 .last-match__medal-count {
-  display: block;
-  margin-top: -33px;
-  padding-left: 10px;
-  color: #fff;
-  font-size: 1.3em;
-  text-shadow: 0px 2px 3px rgba(0, 0, 0, 0.5);
+  text-align: center;
+
+  sup {
+    top: -.2em;
+    margin-right: .1em;
+  }
 }
