--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,47 +1,25 @@
 <div class="wrapper" ng-class="{'my-dtr': subdomain}">
-  <snap-drawer ng-if="screenSize.xs || screenSize.sm">
-    <div class="controls shadow-z-1" ng-controller="HeaderCtrl">
-      <header ng-include="'views/controls/top.html'"></header>
-      <footer ng-include="'views/controls/bottom.html'"></footer>
-    </div>
-  </snap-drawer>
-  <div class="controls shadow-z-1" ng-controller="HeaderCtrl" ng-if="screenSize.md || screenSize.lg">
+  <div class="controls shadow-z-1" ng-controller="HeaderCtrl">
     <header ng-include="'views/controls/top.html'"></header>
     <footer ng-include="'views/controls/bottom.html'"></footer>
   </div>
-  <snap-content style="background-color: #fff" snap-options="snapOpts" ng-if="screenSize.xs || screenSize.sm">
-    <snap-dragger>
-      <button class="btn btn-icon" snap-toggle>
-        <i class="material-icons">&#xE5D2;</i>
-      </button>
-    </snap-dragger>
-    <div class="content" ng-include="'views/content.html'"></div>
-  </snap-content>
-  <div class="content" ng-include="'views/content.html'" ng-if="screenSize.md || screenSize.lg"></div>
+  <div class="content">
+    <div class="container-fluid" ng-if="status">
+      <div class="row">
+        <div class="text-center alert alert-warning">
+          <strong>{{status}}</strong>
+        </div>
+      </div>
+    </div>
+    <div class="blog" ng-show="!fireteam[0] && !status">
+      <div ng-include="'views/blog/index.html'"></div>
+    </div>
+    <div class="players" ng-if="fireteam[0] && !status">
+      <div class="player-container"
+           ng-controller="PlayerCtrl as Player"
+           ng-repeat="player in fireteam track by $index"
+           ng-include="'views/player/index.html'">
+      </div>
+    </div>
+  </div>
 </div>
-
-<!--<div class="wrapper" ng-class="{'my-dtr': subdomain}" ng-if="screenSize.md || screenSize.lg">-->
-  <!--<div id="controls"  class="controls shadow-z-1" ng-controller="HeaderCtrl">-->
-    <!--<header ng-include="'views/controls/top.html'"></header>-->
-    <!--<footer ng-include="'views/controls/bottom.html'"></footer>-->
-  <!--</div>-->
-  <!--<div class="content">-->
-    <!--<div class="container-fluid" ng-if="status">-->
-      <!--<div class="row">-->
-        <!--<div class="text-center alert alert-warning">-->
-          <!--<strong>{{status}}</strong>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-    <!--<div class="blog" ng-show="!fireteam[0] && !status">-->
-      <!--<div ng-include="'views/blog/index.html'"></div>-->
-    <!--</div>-->
-    <!--<div class="players" ng-if="fireteam[0] && !status">-->
-      <!--<div class="player-container"-->
-           <!--ng-controller="PlayerCtrl as Player"-->
-           <!--ng-repeat="player in fireteam track by $index"-->
-           <!--ng-include="'views/player/index.html'">-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</div>-->
